fix: access dbcontext in test
