# src/FacilityManagement.App/src/app/@api/models/role.ts
@@ -1,8 +1,0 @@
-/* tslint:disable */
-import { Privilege } from './privilege';
-import { RoleId } from './role-id';
-export interface Role {
-  name?: string;
-  privileges?: Array<Privilege>;
-  roleId?: RoleId;
-}
