# src/FacilityManagement.Core/AggregatesModel/ProfileAggregate/Profile.cs
@@ -5,5 +5,24 @@ namespace FacilityManagement.Core
         public ProfileId ProfileId { get; set; }  = new ProfileId(Guid.NewGuid());
         public string? FirstName { get; set; }
         public string? LastName { get; set; }
+        public ProfileType ProfileType { get; set; }
+
+        public Profile(string firstName, string lastName, ProfileType profileType)
+        {
+            FirstName = firstName;
+            LastName = lastName;
+            ProfileType = profileType;
+        }
+
+        private Profile()
+        {
+
+        }
+
+        public void Update(string firstName, string lastName)
+        {
+            FirstName = firstName;
+            LastName = lastName;
+        }
     }
 }
